--- a/package.json
+++ b/package.json
@@ -8,8 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "bootstrap": "^5.3.2",
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "datatables.net": "^1.13.8",
+    "datatables.net-dt": "^1.13.8",
+    "firebase": "^9.0.0",
+    "vue": "^3.2.13",
+    "vuetify": "^3.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
